[gd_scene load_steps=2 format=3 uid="uid://bbq3gxg1kiyq5"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_mi2aq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mi2aq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -160.0
offset_right = 96.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLine" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"
alignment = 1

[node name="IPLine" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "IP"
alignment = 1

[node name="PortName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "8910"
placeholder_text = "Port"
alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Join
"

[node name="StartGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Start Game
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
